# character-gen

./: README.md  pyproject.toml
src/character_bible_crew/: cast_crew_factory.py  cast_prompts.py  crew_factory.py  llm.py  main.py  prompts.py  render.py  schemas.py  utils.py
