[project]
name = "character-bible-crew"
version = "0.1.0"
description = "CrewAI-powered character bible generator (Reedsy-style output) via local Ollama"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.70.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.4",
  "rich>=13.7.1",
]

[project.scripts]
character-bible = "character_bible_crew.main:run"

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
]
